--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,20 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
+            
+            <!-- WebJar -->
 		</dependency>
+            <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -91,7 +104,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <!-- Uncomment the configuration below if you face issues with Lombok during build -->
-                <!--
+                
                 <configuration>
                     <excludes>
                         <exclude>
@@ -100,7 +113,6 @@
                         </exclude>
                     </excludes>
                 </configuration>
-                -->
             </plugin>
         </plugins>
     </build>
